--- a/packages/limeberry-components/src/index.html
+++ b/packages/limeberry-components/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
+    <title>Component Testbed</title>
 
     <script type="module" src="/build/limeberry-components.esm.js"></script>
     <script nomodule src="/build/limeberry-components.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <h1>Component List:</h1>
   </body>
 </html>
